tests/pos/log.hs
module LogPosTest where

test :: Floating a => a
test = log 3
