tests/neg/exponentiation.hs
module ExponentiationNegTest where

test :: Floating a => a
test = 0 ** (-1)
